# Copyright (c) 2009-2011, Los Alamos National Security, LLC. All rights
# reserved.
#
# This software was produced under U.S. Government contract DE-AC52-06NA25396
# for Los Alamos National Laboratory (LANL), which is operated by Los Alamos
# National Security, LLC for the U.S. Department of Energy. The U.S. Government
# has rights to use, reproduce, and distribute this software.  NEITHER THE
# GOVERNMENT NOR LOS ALAMOS NATIONAL SECURITY, LLC MAKES ANY WARRANTY, EXPRESS
# OR IMPLIED, OR ASSUMES ANY LIABILITY FOR THE USE OF THIS SOFTWARE.  If
# software is modified to produce derivative works, such modified software
# should be clearly marked, so as not to confuse it with the version available
# from LANL.
#
# Additionally, redistribution and use in source and binary forms, with or
# without modification, are permitted provided that the following conditions are
# met: 
#
# •    Redistributions of source code must retain the above copyright notice,
# this list of conditions and the following disclaimer.
#
# •   Redistributions in binary form must reproduce the above copyright notice,
# this list of conditions and the following disclaimer in the documentation
# and/or other materials provided with the distribution.  
#
# •   Neither the name of Los Alamos National Security, LLC, Los Alamos National
# Laboratory, LANL, the U.S. Government, nor the names of its contributors may
# be used to endorse or promote products derived from this software without
# specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY LOS ALAMOS NATIONAL SECURITY, LLC AND
# CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
# PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL LOS ALAMOS NATIONAL
# SECURITY, LLC OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
# BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER
# IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
# POSSIBILITY OF SUCH DAMAGE.

EXTRA_DIST = \
LANL/configuration_files/README \
LANL/configuration_files/plfs.sysconfig.cerrillos.compute \
LANL/configuration_files/plfs.sysconfig.cerrillos.fe \
LANL/configuration_files/plfs.sysconfig.cielito.compute \
LANL/configuration_files/plfs.sysconfig.cielito.efe \
LANL/configuration_files/plfs.sysconfig.cielito.ife \
LANL/configuration_files/plfs.sysconfig.cielo.compute \
LANL/configuration_files/plfs.sysconfig.cielo.efe \
LANL/configuration_files/plfs.sysconfig.cielo.ife \
LANL/configuration_files/plfs.sysconfig.conejo.compute \
LANL/configuration_files/plfs.sysconfig.conejo.fe \
LANL/configuration_files/plfs.sysconfig.garnet.compute \
LANL/configuration_files/plfs.sysconfig.garnet.fe \
LANL/configuration_files/plfs.sysconfig.hurricane.compute \
LANL/configuration_files/plfs.sysconfig.hurricane.fe \
LANL/configuration_files/plfs.sysconfig.lobo.compute \
LANL/configuration_files/plfs.sysconfig.lobo.fe \
LANL/configuration_files/plfs.sysconfig.mapache.compute \
LANL/configuration_files/plfs.sysconfig.mapache.fe \
LANL/configuration_files/plfs.sysconfig.red.fta \
LANL/configuration_files/plfs.sysconfig.redtail.compute \
LANL/configuration_files/plfs.sysconfig.redtail.fe \
LANL/configuration_files/plfs.sysconfig.roadrunner.compute \
LANL/configuration_files/plfs.sysconfig.roadrunner.fe \
LANL/configuration_files/plfs.sysconfig.rr-dev.compute \
LANL/configuration_files/plfs.sysconfig.rr-dev.fe \
LANL/configuration_files/plfs.sysconfig.rto.compute \
LANL/configuration_files/plfs.sysconfig.rto.fe \
LANL/configuration_files/plfs.sysconfig.smog.compute \
LANL/configuration_files/plfs.sysconfig.smog.efe \
LANL/configuration_files/plfs.sysconfig.smog.ife \
LANL/configuration_files/plfs.sysconfig.turing.compute \
LANL/configuration_files/plfs.sysconfig.turing.fe \
LANL/configuration_files/plfs.sysconfig.turquoise.fta \
LANL/configuration_files/plfs.sysconfig.typhoon.compute \
LANL/configuration_files/plfs.sysconfig.typhoon.fe \
LANL/configuration_files/plfs.sysconfig.yellow.fta \
LANL/configuration_files/plfs.sysconfig.yellowrail.compute \
LANL/configuration_files/plfs.sysconfig.yellowrail.fe \
LANL/configuration_files/plfsrc.cerrillos \
LANL/configuration_files/plfsrc.cerrillos.old \
LANL/configuration_files/plfsrc.cielito \
LANL/configuration_files/plfsrc.cielito.old \
LANL/configuration_files/plfsrc.cielo \
LANL/configuration_files/plfsrc.cielo.old \
LANL/configuration_files/plfsrc.comment \
LANL/configuration_files/plfsrc.conejo \
LANL/configuration_files/plfsrc.conejo.old \
LANL/configuration_files/plfsrc.garnet \
LANL/configuration_files/plfsrc.garnet.old \
LANL/configuration_files/plfsrc.hurricane \
LANL/configuration_files/plfsrc.hurricane.old \
LANL/configuration_files/plfsrc.lobo \
LANL/configuration_files/plfsrc.lobo.old \
LANL/configuration_files/plfsrc.mapache \
LANL/configuration_files/plfsrc.mapache.old \
LANL/configuration_files/plfsrc.red.fta \
LANL/configuration_files/plfsrc.red.fta.old \
LANL/configuration_files/plfsrc.red.mile \
LANL/configuration_files/plfsrc.red.scratch \
LANL/configuration_files/plfsrc.red.scratch1 \
LANL/configuration_files/plfsrc.red.scratch2 \
LANL/configuration_files/plfsrc.red.scratch3 \
LANL/configuration_files/plfsrc.red.scratch4 \
LANL/configuration_files/plfsrc.red.scratch5 \
LANL/configuration_files/plfsrc.red.scratch6 \
LANL/configuration_files/plfsrc.red.threadpool_size.compute \
LANL/configuration_files/plfsrc.red.threadpool_size.fta \
LANL/configuration_files/plfsrc.redtail \
LANL/configuration_files/plfsrc.redtail.old \
LANL/configuration_files/plfsrc.roadrunner \
LANL/configuration_files/plfsrc.roadrunner.old \
LANL/configuration_files/plfsrc.rr-dev \
LANL/configuration_files/plfsrc.rr-dev.old \
LANL/configuration_files/plfsrc.rto \
LANL/configuration_files/plfsrc.rto.old \
LANL/configuration_files/plfsrc.smog \
LANL/configuration_files/plfsrc.smog.old \
LANL/configuration_files/plfsrc.test.scratch1 \
LANL/configuration_files/plfsrc.test.scratch2 \
LANL/configuration_files/plfsrc.test.threadpool_size.compute \
LANL/configuration_files/plfsrc.turing \
LANL/configuration_files/plfsrc.turing.old \
LANL/configuration_files/plfsrc.turquoise.fta \
LANL/configuration_files/plfsrc.turquoise.fta.old \
LANL/configuration_files/plfsrc.turquoise.scratch \
LANL/configuration_files/plfsrc.turquoise.scratch1 \
LANL/configuration_files/plfsrc.turquoise.scratch2 \
LANL/configuration_files/plfsrc.turquoise.threadpool_size.compute \
LANL/configuration_files/plfsrc.turquoise.threadpool_size.fta \
LANL/configuration_files/plfsrc.typhoon \
LANL/configuration_files/plfsrc.typhoon.old \
LANL/configuration_files/plfsrc.yellow.fta \
LANL/configuration_files/plfsrc.yellow.fta.old \
LANL/configuration_files/plfsrc.yellow.scratch2 \
LANL/configuration_files/plfsrc.yellow.scratch3 \
LANL/configuration_files/plfsrc.yellow.threadpool_size.compute \
LANL/configuration_files/plfsrc.yellow.threadpool_size.fta \
LANL/configuration_files/plfsrc.yellowrail \
LANL/configuration_files/plfsrc.yellowrail.old \
syncer/Makefile \
syncer/README \
syncer/etc/example.conf \
syncer/include/Conf.hxx \
syncer/include/CopyTask.hxx \
syncer/include/PerfTest.h \
syncer/include/ThreadPool.hxx \
syncer/src/CopyTask.cpp \
syncer/src/Makefile \
syncer/src/README \
syncer/src/SYNcer.c \
syncer/src/ThreadPool.cpp \
syncer/src/inotify.cxx \
syncer/src/monitor.cxx \
syncer/src/monitor.hxx \
syncer/src/rpcCopy.cxx \
syncer/src/rpcCopy.hxx \
syncer/src/run_viz.sh \
syncer/src/syncer.h \
syncer/src/syncer.x \
syncer/src/syncer_client.c \
syncer/src/syncer_clnt.c \
syncer/src/syncer_server.c \
syncer/src/syncer_svc.c \
syncer/src/syncer_xdr.c \
syncer/src/uthash.h \
syncer/test/Makefile \
syncer/test/checkconfig.cpp \
syncer/test/cp.cpp \
syncer/test/test.cpp
