foreach (SOURCE access.C rename.C)
    get_filename_component(PROG ${SOURCE} NAME_WE)
    add_executable(${PROG} ${PLFS_TESTS_DIR}/${SOURCE})
    target_link_libraries (${PROG} plfs_lib)
    if (BUILD_HDFS)
        target_link_libraries (${PROG} ${JAVA_JVM_LIBRARY})
        target_link_libraries (${PROG} ${HDFS_LIBS})
    endif(BUILD_HDFS)
    if (BUILD_PVFS)
        target_link_libraries (${PROG} ${PVFS_LIBRARIES})
    endif(BUILD_PVFS)
    if (BUILD_IOFSL)
        target_link_libraries (${PROG} ${IOFSL_LIBRARIES})
    endif(BUILD_IOFSL)
endforeach(SOURCE)

find_package(CPPUNIT)
if (CPPUNIT_FOUND)
    foreach (SOURCE plfsunit.cpp smallfileunit.cpp)
        get_filename_component(PROG ${SOURCE} NAME_WE)
        add_executable(${PROG} ${PLFS_TESTS_DIR}/${SOURCE}
			       ${PLFS_TESTS_DIR}/unitmain.cpp)
        target_link_libraries (${PROG} plfs_lib)
	target_link_libraries (${PROG} ${CPPUNIT_LIBRARIES})
        if (BUILD_HDFS)
            target_link_libraries (${PROG} ${JAVA_JVM_LIBRARY})
            target_link_libraries (${PROG} ${HDFS_LIBS})
        endif(BUILD_HDFS)
        if (BUILD_PVFS)
            target_link_libraries (${PROG} ${PVFS_LIBRARIES})
        endif(BUILD_PVFS)
        if (BUILD_IOFSL)
            target_link_libraries (${PROG} ${IOFSL_LIBRARIES})
        endif(BUILD_IOFSL)
    endforeach(SOURCE)
endif(CPPUNIT_FOUND)
