noinst_LTLIBRARIES = libsmallfile.la

libsmallfile_la_SOURCES = \
SmallFileIndex.cpp \
MinimumHeap.cpp \
NamesMapping.cpp \
FileWriter.cpp \
FileReader.cpp \
InMemoryCache.cpp \
SmallFileContainer.cpp \
SMF_Writer.cpp \
ResourceUnit.cpp \
SmallFileLayout.cpp \
SmallFileIndex.hxx \
MinimumHeap.hxx \
NamesMapping.hxx \
FileWriter.hxx \
FileReader.hxx \
InMemoryCache.hxx \
SmallFileContainer.hxx \
SMF_Writer.hxx \
CacheManager.hxx \
ResourceUnit.hxx \
RecordReader.hxx \
SmallFileLayout.h

libsmallfile_la_CXXFLAGS = \
-D_FILE_OFFSET_BITS=64 \
-I../ \
@PTHREAD_CFLAGS@ \
-fPIC -Wall
